[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "panda-jedi"
dynamic = ["version"]
description = "PanDA JEDI Package"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    { name = "PanDA Team", email = "panda-support@cern.ch" },
]
dependencies = [
    'panda-common>=0.0.38',
    'panda-server>=0.0.37',
    'python-daemon',
    'numpy',
    'pyyaml',
    'requests',
    'packaging'
]
requires-python = ">=3.8"

[project.optional-dependencies]
oracle = ['cx_Oracle']
mysql = ['mysqlclient']
postgres =  ['psycopg2-binary']
rucio = ['rucio-clients']
elasticsearch = ['elasticsearch']
atlasprod =  ['cx_Oracle', 'rucio-clients', 'idds-common', 'idds-client']

[project.urls]
Homepage = "https://panda-wms.readthedocs.io/en/latest/"

[tool.hatch.version]
path = "PandaPkgInfo.py"
pattern = "release_version = \"(?P<version>[^\"]+)\""

[tool.hatch.build]
directory = "dist"

[tool.hatch.build.targets.wheel]
exclude = ["*.template"]
packages = ["pandajedi"]

[tool.hatch.build.targets.wheel.shared-data]
"templates" = "etc/panda"
"templates/sysconfig" = "etc/sysconfig"
"templates/init.d" = "etc/rc.d/init.d"
"templates/systemd" = "etc/systemd/system"
"templates/bin" = "usr/bin"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "package/hatch_build.py"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    ".idea",
]

[tool.black]
line-length=160

[tool.autopep8]
# https://pypi.org/project/autopep8/#pyproject-toml
max_line_length = 160
ignore = ["E203", "E501", "W6"]
in-place = true
recursive = true
aggressive = 3

[tool.pylint]
max-line-length = 160
[tool.pylint.'MESSAGES CONTROL']
disable = [
    "C0209",
    "R0902",
    "R0913",
    "R0914", #  R0914: Too many local variables
]

[tool.isort]
profile = "black"

[tool.flynt]
line-length = 160